--- a/src/main/resources/templates/FlightSearch.html
+++ b/src/main/resources/templates/FlightSearch.html
@@ -26,7 +26,7 @@
     </form>
     <br/><br/>
     <table border="1">
-        <th>number</th>
+        <th>Flight Number</th>
         <th>From</th>
         <th>To</th>
         <th>Departure Time</th>
