--- a/src/main/resources/templates/FlightSearch.html
+++ b/src/main/resources/templates/FlightSearch.html
@@ -31,12 +31,14 @@
         <th>To</th>
         <th>Departure Time</th>
         <th>Arrival Time</th>
+        <th>Total Price</th>
         <tr th:each="flight:${flights}">
            <td th:text="${flight.number}"></td>
            <td th:text="${flight.source}"></td>
            <td th:text="${flight.destination}"></td>
            <td th:text="${flight.departureTime.getTime()}"></td>
            <td th:text="${flight.arrivalTime.getTime()}"></td>
+            <td th:text="${flight.getPrice()}"></td>
         </tr>
     </table>
 </div>
